<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="390dp"
        android:layout_height="322dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_main" />

    <Button
        android:id="@+id/shoot"
        android:layout_width="292dp"
        android:layout_height="52dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/shape"
        android:onClick="click"
        android:text="@string/shoot"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/import_video"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:text="@string/import_video"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/shoot"
        app:layout_constraintStart_toStartOf="@+id/shoot"
        app:layout_constraintTop_toBottomOf="@+id/shoot" />
</androidx.constraintlayout.widget.ConstraintLayout>

